--- a/.gitconfig
+++ b/.gitconfig
@@ -13,3 +13,12 @@
 	amend = commit --amend -C HEAD
 [apply]
 	whitespace = nowarn
+
+[push]
+	default = current
+
+[merge]
+	conflictstyle = diff3
+
+[gc]
+	pruneexpire = 30 days
