Use address with @gmail.com

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Daniel Werner
-	email = daniel.d.werner@googlemail.com
+	email = daniel.d.werner@gmail.com
 [color]
 	diff = auto
 	status = auto
