--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule ".vim/bundle/less"]
 	path = .vim/bundle/less
 	url = git://github.com/groenewege/vim-less.git
+[submodule ".oh-my-zsh"]
+	path = .oh-my-zsh
+	url = git@github.com:danwerner/oh-my-zsh.git
